--- a/biografia.html
+++ b/biografia.html
@@ -90,20 +90,16 @@
 				<div class="col col-12 col-sm-8 text-center text-sm-right mt-3">
 					<h3>Vida Temprana</h3>
                     <br>
-					<p>Rust nació en Texas, pero luego se mudó con su padre a Alaska, donde pasó la mayor parte de su infancia. 
-						Más tarde deja Alaska y regresa a Texas, supuestamente porque prefería la temperatura y las condiciones climáticas allí. 
-						Luego se casó con una mujer llamada Claire. Los dos tenían una hija, Sophia Cohle, que murió trágicamente en un accidente automovilístico. 
+					<p>Rust nació en Texas y se casó con una mujer llamada Claire. Los dos tenían una hija, Sophia Cohle, que murió trágicamente en un accidente automovilístico. 
 						La pérdida de su hija condujo rápidamente al divorcio de Cohle, así como a su adicción al alcohol. 
 						Cohle pasó del robo a los narcóticos y finalmente se volvió adicto a la cocaína y posiblemente a otras sustancias narcóticas. 
-						En algún momento durante su tiempo en narcóticos, mató a un adicto a la metanfetamina por inyectar metanfetamina a su pequeña hija. 
-						El fiscal estatal le dio a Cohle la opción de ir a prisión por asesinato en primer grado o aceptar ser su narco encubierto profundo, 
-						por un período de tiempo no especificado. Cohle se vio obligado a pasar cuatro años encubierto, y en febrero de 1993 mató a tres 
-						miembros del cartel y recibió tres disparos con una pistola calibre .25. Durante su recuperación de los disparos y de sus adicciones 
-						a las sustancias, estuvo internado en un hospital psiquiátrico en Texas. Tras su liberación, se le ofreció la jubilación con pensión 
-						completa, pero rechazó esa oferta a favor de la transferencia a una división de homicidios. Luego, sus superiores lo trasladaron a Luisiana. En Louisiana, vive solo y no tiene amigos, familia o relaciones, solo vive para su trabajo. Intenta mantenerse sobrio, pero ocasionalmente no lo logra, principalmente debido al dolor por su hija. Cohle también es propenso a las alucinaciones auditivas y visuales, 
-						como resultado de su abuso de sustancias durante sus días como narco encubierto.</p>
+						En algún momento durante su tiempo en narcóticos, mató a un adicto a la metanfetamina. 
+						El fiscal estatal le dio a Cohle la opción de ir a prisión por asesinato en primer grado o aceptar ser su narco encubierto profundo. 
+						Cohle se vio obligado a pasar cuatro años encubierto, y en una redada fue herido.
+						Durante su recuperación estuvo internado en un hospital psiquiátrico en Texas. Tras su liberación, 
+						fue transfererido a una división de homicidios.</p>
 				</div>
-				<div class="col col-12 col-sm-4 genesis-review-left">
+				<div class="col col-12 col-sm-4 bio2-review-left">
 					<div class="media">
 						<div class="d-none d-sm-inline ml-auto">
 						</div>
@@ -112,7 +108,7 @@
 			</div>
 
 			<div class="row bio-panel-left">
-				<div class="col col-12 col-sm-4 whitney-review-left">
+				<div class="col col-12 col-sm-4 bio3-review-left">
 					<div class="media">
 						<div class="d-none d-sm-inline ml-auto">
 						</div>
