--- a/aficiones.html
+++ b/aficiones.html
@@ -169,27 +169,24 @@
 						</div>
 						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
 							<div class="col ">
-								<h3 class="footer-header">Sitios
+								<h3 class="footer-header">Enlaces Externos
 									<hr>
 								</h3>
 								<ul class="navbar-nav ml-auto">
 									<li class="text-center">
-										<a href="index.html">Inicio</a>
+										<a href="https://www.youtube.com/watch?v=-c1wV72-OrA">Tributo 1</a>
 									</li>
 									<li class="text-center">
-										<a href="rutina.html">Rutina</a>
+										<a href="https://www.youtube.com/watch?v=OIwYDfHP9ns">Tributo 2</a>
 									</li>
 									<li class="text-center">
-										<a href="aficiones.html">Aficiones</a>
-									</li>
-									<li class="text-center">
-										<a href="biografia.html">Biografia</a>
+										<a href="https://www.youtube.com/watch?v=IC8o8lFZz8Q&t=360s">World Needs Bad Men</a>
 									</li>
 								</ul>
 							</div>
 						</div>
 						<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
-							<form>
+							<form action="http://www2.gonzalonazareno.org/josedom/resultado.php" method="post">
 								<div class="row">
 									<div class="col col-12">
 										<h3 class="footer-header"> Suscríbete
@@ -198,14 +195,23 @@
 									</div>
 									<div class="col col-12">
 										<input type="text" class="form-control" placeholder="Nombre">
-                                </div>
-										<div class="col col-12">
-											<input type="email" class="form-control" placeholder="Email">
-                                </div>
-											<div class="col col-12">
-												<input type="submit" class="form-control" placeholder="Apellidos">
-                                </div>
-											</div>
+                                	</div>
+									<div class="col col-12">
+										<input type="text" class="form-control" placeholder="Apellidos">
+                                	</div>
+									<div class="col col-12">
+										<input type="password" class="form-control" placeholder="Contraseña">
+									</div>
+									<div class="col col-12">
+										<input type="number" class="form-control" placeholder="Edad" min="18" max="99">
+									</div>
+									<div class="col col-12">
+										<input type="email" class="form-control" placeholder="Email">
+                                	</div>
+									<div class="col col-12">
+										<input type="submit" class="form-control" placeholder="Enviar">
+                                	</div>
+								</div>
 							</form>
 						</div>
 					</div>
