--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@
 					</div>
 				</div>
 				<hr>
+				<table class="table">
+					<thead>
+						<tr>
+							<th>Nombre Completo</th>
+							<th>Alias</th>
+							<th>Fecha de Nacimiento</th>
+							<th>Lugar de Nacimiento</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Rustin Spencer Cohle</td>
+							<td>Crash <br> The Taxman</td>
+							<td>1960</td>
+							<td>Texas, Estados Unidos</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
 
