--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<hr>
 			<div class="row">
 				<div class="col col-12 col-md-6 col-xl-4">
-					<img src="assets/images/rust_1995.png" class="mw-100";>
+					<img src="assets/images/rust_1995.png" class="mw-100">
                 </div>
 					<div class="col col-12 col-md-6 col-xl-8 text-center text-md-left">
 						<h2 class="mt-5 mb-1">RUST COHLE</h2>
@@ -149,7 +149,7 @@
 										<input type="email" class="form-control" placeholder="Email">
                                 	</div>
 									<div class="col col-12">
-										<input type="submit" class="form-control" placeholder="Enviar">
+										<input type="submit" class="form-control">
                                 	</div>
 								</div>
 							</form>
