--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-	<!------- ▼  Header. ▼ ------->
+	<!-- Header -->
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 
@@ -47,13 +47,13 @@
 		</nav>
 	</header>
 
-	<!------- ▼  Banner. ▼ ------->
+	<!-- Banner -->
 	<div class="container-fluid">
 		<div id="wrapper">
 			<hr>
 			<div class="row">
 				<div class="col col-12 col-md-6 col-xl-4">
-					<img src="assets/images/rust_1995.png" class="mw-100">
+					<img src="assets/images/rust_1995.png" class="mw-100" alt="">
                 </div>
 					<div class="col col-12 col-md-6 col-xl-8 text-center text-md-left">
 						<h2 class="mt-5 mb-1">RUST COHLE</h2>
@@ -84,7 +84,7 @@
 		</div>
 
 
-		<!------- ▼  Footer ▼ ------->
+		<!-- Footer -->
 
 		<footer>
 			<div class="container-fluid bg-light px-auto pt-4">
@@ -159,7 +159,7 @@
 			</div>
 
 
-			<!------- ▼  Sub-footer for personal brand ▼ ------->
+			<!-- Sub-footer for personal brand -->
 			<div class="container-fluid bg-dark">
 				<div id="wrapper">
 					<div class="row">
@@ -171,7 +171,7 @@
 			</div>
 		</footer>
 
-		<!------- ▼  Bootstrap Javascript tags. ▼ ------->
+		<!-- Bootstrap Javascript tags -->
 
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
