--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 	<!-- Banner -->
 	<div class="container-fluid">
-		<div id="wrapper">
+		<div id="wrapper1">
 			<hr>
 			<div class="row">
 				<div class="col col-12 col-md-6 col-xl-4">
@@ -85,7 +85,7 @@
 
 		<footer>
 			<div class="container-fluid bg-light px-auto pt-4">
-				<div id="wrapper">
+				<div id="wrapper2">
 					<div class="row">
 						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
 							<div class="col">
@@ -158,7 +158,7 @@
 
 			<!-- Sub-footer for personal brand -->
 			<div class="container-fluid bg-dark">
-				<div id="wrapper">
+				<div id="wrapper3">
 					<div class="row">
 						<div class='col-12 py-2 text-right text-white'>
 							Iván Piña Castillo
