--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 	<!-- Banner -->
 	<div class="container-fluid">
-		<div id="wrapper1">
+		<div id="wrapper">
 			<hr>
 			<div class="row">
 				<div class="col col-12 col-md-6 col-xl-4">
@@ -90,7 +90,6 @@
 						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
 							<div class="col">
 								<h3 class="footer-header">Contacto
-									<hr>
 								</h3>
 							</div>
 							<div class="col">
@@ -107,7 +106,6 @@
 						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
 							<div class="col ">
 								<h3 class="footer-header">Enlaces Externos
-									<hr>
 								</h3>
 								<ul class="navbar-nav ml-auto">
 									<li class="text-center">
@@ -127,7 +125,6 @@
 								<div class="row">
 									<div class="col col-12">
 										<h3 class="footer-header"> Suscríbete
-											<hr>
 										</h3>
 									</div>
 									<div class="col col-12">
