--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 			<a href="index.html" class="navbar-brand cohle">R. C.</a>
 
-			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#HamburgerItems" aria-controls="#HamburgerItems">
+			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#HamburgerItems">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
