--- a/2012.html
+++ b/2012.html
@@ -5,9 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="shortcut icon" type="image/PNG" href="assets/images/favicon.png">
@@ -18,13 +15,13 @@
 
 <body>
 
-<!------- ▼  Header. ▼ ------->
+<!-- Header -->
 <header>
 	<nav class="navbar navbar-expand-md navbar-light bg-light">
 
 		<a href="index.html" class="navbar-brand cohle">R. C.</a>
 
-		<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#HamburgerItems" aria-controls="#HamburgerItems" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#HamburgerItems">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
@@ -47,7 +44,7 @@
 	</nav>
 </header>
 
-	<!------- ▼  Banner. ▼ ------->
+	<!-- Banner -->
 	<div class="container-fluid">
 		<div id="wrapper">
 			<hr>
@@ -83,16 +80,15 @@
 			</div>
 		</div>
 
-		<!------- ▼  Footer ▼ ------->
+		<!-- Footer -->
 
 		<footer>
 			<div class="container-fluid bg-light px-auto pt-4">
-				<div id="wrapper">
+				<div id="wrapper2">
 					<div class="row">
 						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
 							<div class="col">
 								<h3 class="footer-header">Contacto
-									<hr>
 								</h3>
 							</div>
 							<div class="col">
@@ -109,7 +105,6 @@
 						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
 							<div class="col ">
 								<h3 class="footer-header">Enlaces Externos
-									<hr>
 								</h3>
 								<ul class="navbar-nav ml-auto">
 									<li class="text-center">
@@ -129,7 +124,6 @@
 								<div class="row">
 									<div class="col col-12">
 										<h3 class="footer-header"> Suscríbete
-											<hr>
 										</h3>
 									</div>
 									<div class="col col-12">
@@ -148,7 +142,7 @@
 										<input type="email" class="form-control" placeholder="Email">
                                 	</div>
 									<div class="col col-12">
-										<input type="submit" class="form-control" placeholder="Enviar">
+										<input type="submit" class="form-control">
                                 	</div>
 								</div>
 							</form>
@@ -158,9 +152,9 @@
 			</div>
 
 
-			<!------- ▼  Sub-footer for personal brand ▼ ------->
+			<!-- Sub-footer for personal brand -->
 			<div class="container-fluid bg-dark">
-				<div id="wrapper">
+				<div id="wrapper3">
 					<div class="row">
 						<div class='col-12 py-2 text-right text-white'>
 							Iván Piña Castillo
@@ -170,7 +164,7 @@
 			</div>
 		</footer>
 
-		<!------- ▼  Bootstrap Javascript tags. ▼ ------->
+		<!-- Bootstrap Javascript tags -->
 
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
