--- a/2012.html
+++ b/2012.html
@@ -50,7 +50,7 @@
 			<hr>
 			<div class="row">
 				<div class="col col-12 col-md-6 col-lg-4">
-					<img src="assets/images/rust_2012.png" class="mw-100">
+					<img src="assets/images/rust_2012.png" class="mw-100" alt="">
                     </div>
 					<div class="col col-12 col-md-6 col-lg-8 text-center text-md-left">
 						<h2 class="mt-5 mb-1">RUST COHLE</h2>
