--- a/biografia.html
+++ b/biografia.html
@@ -135,105 +135,103 @@
 	</div>
 	</div>
 	</div>
-		<!------- ▼  Footer ▼ ------->
 
-		<footer>
-			<div class="container-fluid bg-light px-auto pt-4">
-				<div id="wrapper">
-					<div class="row">
-						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-							<div class="col">
-								<h3 class="footer-header">Contacto
-									<hr>
-								</h3>
-							</div>
-							<div class="col">
-								<p class="footer-paragraph">
-									Criminal Investigations Division,<br>
-								5903 Coliseum Blvd.,<br>
-                                Alexandria, LA 71303
-                            </p>
-									<p>
-										<a href="tel:+2125556342">318 484 2190</a>
-									</p>
-							</div>
-						</div>
-						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-							<div class="col ">
-								<h3 class="footer-header">Enlaces Externos
-									<hr>
-								</h3>
-								<ul class="navbar-nav ml-auto">
-									<li class="text-center">
-										<a href="https://www.youtube.com/watch?v=-c1wV72-OrA">Tributo 1</a>
-									</li>
-									<li class="text-center">
-										<a href="https://www.youtube.com/watch?v=OIwYDfHP9ns">Tributo 2</a>
-									</li>
-									<li class="text-center">
-										<a href="https://www.youtube.com/watch?v=IC8o8lFZz8Q&t=360s">World Needs Bad Men</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
-							<form action="http://www2.gonzalonazareno.org/josedom/resultado.php" method="post">
-								<div class="row">
-									<div class="col col-12">
-										<h3 class="footer-header"> Suscríbete
-											<hr>
-										</h3>
-									</div>
-									<div class="col col-12">
-										<input type="text" class="form-control" placeholder="Nombre">
-                                	</div>
-									<div class="col col-12">
-										<input type="text" class="form-control" placeholder="Apellidos">
-                                	</div>
-									<div class="col col-12">
-										<input type="password" class="form-control" placeholder="Contraseña">
-									</div>
-									<div class="col col-12">
-										<input type="number" class="form-control" placeholder="Edad" min="18" max="99">
-									</div>
-									<div class="col col-12">
-										<input type="email" class="form-control" placeholder="Email">
-                                	</div>
-									<div class="col col-12">
-										<input type="submit" class="form-control" placeholder="Enviar">
-                                	</div>
+			<!-- Footer -->
+
+			<footer>
+				<div class="container-fluid bg-light px-auto pt-4">
+					<div id="wrapper2">
+						<div class="row">
+							<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+								<div class="col">
+									<h3 class="footer-header">Contacto
+									</h3>
 								</div>
-							</form>
+								<div class="col">
+									<p class="footer-paragraph">
+										Criminal Investigations Division,<br>
+									5903 Coliseum Blvd.,<br>
+									Alexandria, LA 71303
+								</p>
+										<p>
+											<a href="tel:+2125556342">318 484 2190</a>
+										</p>
+								</div>
+							</div>
+							<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+								<div class="col ">
+									<h3 class="footer-header">Enlaces Externos
+									</h3>
+									<ul class="navbar-nav ml-auto">
+										<li class="text-center">
+											<a href="https://www.youtube.com/watch?v=-c1wV72-OrA">Tributo 1</a>
+										</li>
+										<li class="text-center">
+											<a href="https://www.youtube.com/watch?v=OIwYDfHP9ns">Tributo 2</a>
+										</li>
+										<li class="text-center">
+											<a href="https://www.youtube.com/watch?v=IC8o8lFZz8Q&t=360s">World Needs Bad Men</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
+								<form action="http://www2.gonzalonazareno.org/josedom/resultado.php" method="post">
+									<div class="row">
+										<div class="col col-12">
+											<h3 class="footer-header"> Suscríbete
+											</h3>
+										</div>
+										<div class="col col-12">
+											<input type="text" class="form-control" placeholder="Nombre">
+										</div>
+										<div class="col col-12">
+											<input type="text" class="form-control" placeholder="Apellidos">
+										</div>
+										<div class="col col-12">
+											<input type="password" class="form-control" placeholder="Contraseña">
+										</div>
+										<div class="col col-12">
+											<input type="number" class="form-control" placeholder="Edad" min="18" max="99">
+										</div>
+										<div class="col col-12">
+											<input type="email" class="form-control" placeholder="Email">
+										</div>
+										<div class="col col-12">
+											<input type="submit" class="form-control">
+										</div>
+									</div>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-
-
-			<!------- ▼  Sub-footer for personal brand ▼ ------->
-			<div class="container-fluid bg-dark">
-				<div id="wrapper">
-					<div class="row">
-						<div class='col-12 py-2 text-right text-white'>
-							Iván Piña Castillo
+	
+	
+				<!-- Sub-footer for personal brand -->
+				<div class="container-fluid bg-dark">
+					<div id="wrapper3">
+						<div class="row">
+							<div class='col-12 py-2 text-right text-white'>
+								Iván Piña Castillo
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</footer>
-
-		<!------- ▼  Bootstrap Javascript tags. ▼ ------->
-
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-		</script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-		</script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-		</script>
-
-</body>
-
-</html>
+			</footer>
+	
+			<!-- Bootstrap Javascript tags -->
+	
+			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+				integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+			</script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+				integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+			</script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+				integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+			</script>
+	
+	</body>
+	
+	</html>
