--- a/rutina.html
+++ b/rutina.html
@@ -100,16 +100,15 @@
 
 
 
-		<!------- ▼  Footer ▼ ------->
+		<!-- Footer -->
 
 		<footer>
 			<div class="container-fluid bg-light px-auto pt-4">
-				<div id="wrapper">
+				<div id="wrapper2">
 					<div class="row">
 						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
 							<div class="col">
 								<h3 class="footer-header">Contacto
-									<hr>
 								</h3>
 							</div>
 							<div class="col">
@@ -126,7 +125,6 @@
 						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
 							<div class="col ">
 								<h3 class="footer-header">Enlaces Externos
-									<hr>
 								</h3>
 								<ul class="navbar-nav ml-auto">
 									<li class="text-center">
@@ -146,7 +144,6 @@
 								<div class="row">
 									<div class="col col-12">
 										<h3 class="footer-header"> Suscríbete
-											<hr>
 										</h3>
 									</div>
 									<div class="col col-12">
@@ -165,7 +162,7 @@
 										<input type="email" class="form-control" placeholder="Email">
                                 	</div>
 									<div class="col col-12">
-										<input type="submit" class="form-control" placeholder="Enviar">
+										<input type="submit" class="form-control">
                                 	</div>
 								</div>
 							</form>
@@ -175,9 +172,9 @@
 			</div>
 
 
-			<!------- ▼  Sub-footer for personal brand ▼ ------->
+			<!-- Sub-footer for personal brand -->
 			<div class="container-fluid bg-dark">
-				<div id="wrapper">
+				<div id="wrapper3">
 					<div class="row">
 						<div class='col-12 py-2 text-right text-white'>
 							Iván Piña Castillo
@@ -187,7 +184,7 @@
 			</div>
 		</footer>
 
-		<!------- ▼  Bootstrap Javascript tags. ▼ ------->
+		<!-- Bootstrap Javascript tags -->
 
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
