--- a/rutina.html
+++ b/rutina.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
 	<!-- Header -->
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -94,6 +95,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 
 
 
