--- a/aficiones.html
+++ b/aficiones.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<!------- ▼  Header. ▼ ------->
+	<!-- Header -->
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 
@@ -45,7 +45,7 @@
 			</div>
 		</nav>
 	</header>
-	<!------- ▼  Banner. ▼ ------->
+	<!-- Banner -->
 	<div class="container-fluid aficiones-container">
 		<div class="opaque-overlay">&nbsp;</div>
 		<div class="row">
@@ -55,7 +55,7 @@
 		</div>
 	</div>
 
-    	<!------- ▼  About Section ▼ ------->
+    	<!-- About Section -->
 
 	<div class="container-fluid">
 		<div id="wrapper">
