--- a/biografia.html
+++ b/biografia.html
@@ -5,9 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="shortcut icon" type="image/PNG" href="assets/images/favicon.png">
@@ -18,7 +15,7 @@
 
 <body>
 
-		<!------- ▼  Header. ▼ ------->
+		<!-- Header -->
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 
@@ -27,7 +24,7 @@
 
 			<section>
 			</section>
-			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#HamburgerItems" aria-controls="#HamburgerItems" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#HamburgerItems">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -50,7 +47,7 @@
 		</nav>
 	</header>
 
-	<!------- ▼  Banner. ▼ ------->
+	<!-- Banner -->
 	<div class="container-fluid bio-container">
 		<div class="opaque-overlay">&nbsp;</div>
 		<div class="row">
@@ -60,7 +57,7 @@
 		</div>
 	</div>
 
-	<!------- ▼  About Section ▼ ------->
+	<!-- About Section -->
 	<div class="container-fluid">
 		<div id="wrapper">
 			<div class="row my-5">
